# zippathlib

./: CHANGES  README.md  pyproject.toml  tox.ini
src/zippathlib/: __init__.py  __main__.py  zip_pathlib.py
tests/: test_basic_read_write.py  test_cli.py  test_path_properties_and_functions.py  test_utils.py  test_zip_create.py  test_zipfile_navigation.py  util.py
